--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Decent Software for Modern Technology
 use-site-title: true
+bigimage: /img/header.png
 ---
 
 <div class="posts-list">
