Added new blog post, and updated theme and CSS.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: Decent Software for Modern Technology
+title: Bolt Software
+subtitle: Decent Programming for Modern Technology
 use-site-title: true
-bigimage: /img/header.png
 ---
 
 <div class="posts-list">
